--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     background-color: #b279b9;
     margin: 0;
-    padding: 0;
+    padding: 40px;
 }
 
 h1{
