--- a/style.css
+++ b/style.css
@@ -1,66 +1,107 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #b279b9;
-    margin: 0;
-    padding: 40px;
+    background-image: url(Sobre\ mim.png);
+    color: white;
+    padding: 50px;
+    max-width: 1200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-h1{
-    color:#70458d;
+h1 {
+    font-weight: 200;
+    color: #d39205;
 }
+
 .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #440e831e;
+    border-radius: 10px;
     max-width: 600px;
-    margin: 50px auto;
-    background-color: #ffffff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(245, 243, 245, 0.1);
-    text-align: center;
+    min-width: 400px;
+    position: relative;
+    width: fit-content;
+
 }
 
-.frase{
-    text-align: center;
-    color: #fff;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+.input-wrapper {
+    position: relative;
+    width: 100%;
+    max-width: 300px;
+    margin: 20px 0;
 }
 
-#taskInputContainer {
-    margin-bottom: 20px;
+.input {
+    width: 80%;
+    padding: 10px 45px 10px 15px;
+    border: none;
+    border-radius: 20px;
+    background-color: rgba(76, 47, 143, 0.3); /* translúcido */
+    color: rgb(255, 255, 255);
+    font-size: 14px;
+    outline: none;
 }
 
-#newTask {
-    padding: 8px;
-    width: 70%;
-}
-
-button {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    padding: 8px;
+.btn-add {
+    position: absolute;
+    right: 8px;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: #6560a100;
+    border: none;
+    border-radius: 50%;
+    width: 28px;
+    height: 28px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     cursor: pointer;
-    color: #eee;
-    background-color: #70458d;
-    border-radius: 3px;
 }
 
-ul {
-    list-style-type: none;
-    padding: 0;
+.btn-icon {
+    width: 14px;
+    height: 14px;
+    filter: invert(100%);
 }
 
-li {
-    background-color: #eee;
-    margin-bottom: 10px;
-    padding: 10px;
-    border-radius: 4px;
+.list-item {
+    background-color: rgba(105, 102, 141, 0.3);
+    border-radius: 20px;
+    padding: 10px 45px 10px 15px;
+    margin: 10px 0;
+    color: white;
+    font-size: 14px;
+    position: relative;
+    list-style: none;
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-
-li button {
-    background-color: #db5b71;
-    color: #fff;
-    border-radius: 3px;
-    padding: 5px 10px;
+  }
+  
+  .btn-remove {
+    position: absolute;
+    right: 8px;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: #631111;
+    border: none;
+    border-radius: 50%;
+    width: 28px;
+    height: 28px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     cursor: pointer;
+  }
+  
+  .btn-icon {
+    width: 14px;
+    height: 14px;
+  }
+  
+ul {
+    padding-inline-start: 0px;
 }
